0.07    Sun Aug 16 10:38:47 CDT 2009
        - deprecate apply_traits ("no warnings" to disable warning)
        - add MooseX::Traits::Util so that other modules can resolve trait names
        - add new_class_with_traits util function to create classes with traits

0.06    Mon Jun 29 00:30:58 CEST 2009
        - use "is => bare" on newer moosen (Closes: RT#47011) (hdp)
        - depend on a Moose version that provides
          meta->constructor_name (Closes RT#46936)

0.05    Thu May 28 08:37:21 MST 2009
        - support subclasses of classes that use MX::Traits

0.04    Tue May 26 23:00:29 MST 2009
        - add apply_traits method
        - use meta->constructor_name instead of 'new'

0.03    Thu Jun 12 11:57:29 CDT 2008
        - stevan changed some stuff

0.02    Mon Jun  2 18:40:55 CDT 2008
        - leave "new" alone, add a new "new_with_traits" instead

0.01    Sat May 24 18:54:26 CDT 2008
        - inital release